Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77336

Drag icons image is not correct.

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • 20266820a31d5cd4afc808bc8b3e9eb6e0396358 (qt/qtbase/5.14)

    Description

      When an item is being partially visible on view port andĀ  dragging starts, the scrapped iconĀ  remains same as it was one view i.e. partially visible.

      Attached screen shot. it can be easily seen with Qt Creator list of files .

      Just shrink the list so that you get scrollbar and start dragging partially visible file name from file lists.

      Attachments

        1. dnd
          962 kB
        2. main.cpp
          1.0 kB
        3. qtbug77336.zip
          1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes